--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -475,6 +475,8 @@ h6 {
 
 .footer .footer-top {
   padding-top: 50px;
+  color: #ffffff;
+  background-color: #111111;
 }
 
 .footer .footer-about .logo {
@@ -484,6 +486,7 @@ h6 {
 
 .footer .footer-about .logo img {
   max-height: 40px;
+  
   margin-right: 6px;
 }
 
@@ -512,6 +515,7 @@ h6 {
   color: color-mix(in srgb, var(--default-color), transparent 30%);
   margin-right: 10px;
   transition: 0.3s;
+  color: #ffffff;
 }
 
 .footer .social-links a:hover {
@@ -523,11 +527,13 @@ h6 {
   font-size: 16px;
   font-weight: bold;
   position: relative;
+  color: #ffffff;
   padding-bottom: 12px;
 }
 
 .footer .footer-links {
   margin-bottom: 30px;
+  
 }
 
 .footer .footer-links ul {
@@ -550,11 +556,13 @@ h6 {
 
 .footer .footer-links ul li:first-child {
   padding-top: 0;
+  
 }
 
 .footer .footer-links ul a {
   color: color-mix(in srgb, var(--default-color), transparent 30%);
   display: inline-block;
+  color: #ffffff;
   line-height: 1;
 }
 
@@ -564,6 +572,7 @@ h6 {
 
 .footer .footer-contact p {
   margin-bottom: 5px;
+  
 }
 
 .footer .footer-newsletter .newsletter-form {
@@ -663,16 +672,23 @@ h6 {
 .footer .copyright {
   padding-top: 25px;
   padding-bottom: 25px;
+  background-color: #111111;
+  color: #ffffff;
   border-top: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
 }
 
 .footer .copyright p {
   margin-bottom: 0;
+  color: #ffffff;
+  background-color: #111111
 }
 
 .footer .credits {
   margin-top: 6px;
+  background-color: #111111;
+  color: #ffffff;
   font-size: 13px;
+  
 }
 
 /*--------------------------------------------------------------
