--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -525,13 +525,13 @@ h6 {
   color: color-mix(in srgb, var(--default-color), transparent 30%);
   margin-right: 10px;
   transition: 0.3s;
-  color: #ffffff;
+  color: #F1F2F4;
 }
 
-.footer .social-links a:hover {
+/* .footer .social-links a:hover {
   color: var(--accent-color);
   border-color: var(--accent-color);
-}
+} */
 
 .footer h4 {
   font-size: 16px;
@@ -572,16 +572,17 @@ h6 {
 .footer .footer-links ul a {
   color: color-mix(in srgb, var(--default-color), transparent 30%);
   display: inline-block;
-  color: #ffffff;
+  color: #F1F2F4;
   line-height: 1;
 }
 
-.footer .footer-links ul a:hover {
+/* .footer .footer-links ul a:hover {
   color: var(--accent-color);
-}
+} */
 
 .footer .footer-contact p {
   margin-bottom: 5px;
+  opacity: 70%;
   
 }
 
@@ -690,6 +691,7 @@ h6 {
 .footer .copyright p {
   margin-bottom: 0;
   color: #ffffff;
+  opacity: 50%;
   background-color: #111111
 }
 
