--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -689,18 +689,20 @@ h6 {
 }
 
 .footer .copyright p {
-  margin-bottom: 0;
+  margin-bottom: -46px;
   color: #ffffff;
+  font-size: 18px;
   opacity: 50%;
   background-color: #111111
 }
 
 .footer .credits {
-  margin-top: 6px;
+  margin-top: 25px;
   background-color: #111111;
   color: #ffffff;
-  font-size: 13px;
-  
+  font-size: 18px;
+  text-align: right;
+  opacity: 30%;
 }
 
 /*--------------------------------------------------------------
