--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,7 +12,7 @@
 --------------------------------------------------------------*/
 /* Fonts */
 :root {
-  --default-font:  "Onest", sans-serif, "Roboto", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial,  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --default-font: "Onest", sans-serif, "Roboto", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --heading-font: "Onest", sans-serif;
   --nav-font: "Onest", sans-serif;
 }
@@ -29,7 +29,7 @@
   --heading-color: #3e5055;
 
   /* Accent Color - This is the main accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out. */
-  --accent-color:  #2873BD;
+  --accent-color: #2873BD;
   ;
 
   /* Contrast Color - This is a color used for text when the background color is one of the heading, accent, or default colors. Its purpose is to ensure proper contrast and readability when placed over these more dominant colors. */
@@ -126,7 +126,7 @@ h6 {
   }
 }
 
-.loginbutton{
+.loginbutton {
   color: #0C0C0C;
   font-size: 18px;
   font-weight: 550;
@@ -265,15 +265,16 @@ h6 {
 
   .navmenu .dropdown ul a i {
     font-size: 12px;
-    
+
   }
+
   .bi-chevron-down {
     color: #0C0C0C;
     font-weight: bold;
     /* height: 24px;
     width: 24px; */
     /* font-weight:900px ; */
-}
+  }
 
   .navmenu .dropdown ul a:hover,
   .navmenu .dropdown ul .active:hover,
@@ -544,7 +545,7 @@ h6 {
 
 .footer .footer-links {
   margin-bottom: 30px;
-  
+
 }
 
 .footer .footer-links ul {
@@ -567,7 +568,7 @@ h6 {
 
 .footer .footer-links ul li:first-child {
   padding-top: 0;
-  
+
 }
 
 .footer .footer-links ul a {
@@ -586,7 +587,7 @@ h6 {
 .footer .footer-contact p {
   margin-bottom: 5px;
   opacity: 70%;
-  
+
 }
 
 .footer .footer-newsletter .newsletter-form {
@@ -656,8 +657,8 @@ h6 {
 .footer .footer-newsletter .loading {
   display: none;
   background: var(--background-color);
-  text-align: center;
   padding: 15px;
+  text-align: center;
   margin-top: 10px;
 }
 
@@ -1446,10 +1447,39 @@ section,
 /*--------------------------------------------------------------
 # Pricing Section
 --------------------------------------------------------------*/
-.pricing .pricing-item {
-  background-color: color-mix(in srgb, var(--accent-color), transparent 96%);
+.pricing {
+  background-color: #2a4d6f;
+  color: #FFFFFF;
+  font-size: 18px;
+}
+.pricing h2{
+  color: #FFFFFF;
+  font-size: 34px;
+}
+.pricing .pricing-item-one {
+background-color: #ffffff;
   padding: 40px 40px;
-  height: 100%;
+  color: #0C0C0C;
+  font-weight: 600;
+  height:525px ;
+  width: 420px;
+  border-radius: 15px;
+}
+.pricing .pricing-item-two {
+background-color: #0B0B0B;
+  font-weight: 600;
+  padding: 40px 40px;
+  height:525px ;
+  width: 420px;
+  border-radius: 15px;
+}
+.pricing .pricing-item-three {
+  background-color: #ffffff;
+  padding: 40px 40px;
+  color: #0C0C0C;
+  font-weight: 600;
+  height:525px ;
+  width: 420px;
   border-radius: 15px;
 }
 
@@ -1463,6 +1493,7 @@ section,
   color: var(--accent-color);
   font-size: 48px;
   font-weight: 700;
+  color: #0C0C0C;
   font-family: var(--heading-font);
   margin-bottom: 0;
 }
@@ -1478,13 +1509,39 @@ section,
 }
 
 .pricing .description {
-  font-size: 14px;
+  font-size: 18px;
+  font-weight: 400;
+  color: #3B3C45;
+  ;
+}
+.pricing .description-two {
+  font-size: 18px;
+  font-weight: 400;
+  color: #FFFFFF;
+  ;
 }
 
 .pricing .cta-btn {
   background-color: var(--default-color);
   color: var(--contrast-color);
   display: block;
+  background: #2873BD;
+  ;
+  text-align: center;
+  padding: 10px 35px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 500;
+  font-family: var(--heading-font);
+  transition: 0.3s;
+  margin-top: 20px;
+  margin-bottom: 6px;
+}
+.pricing .cta-btn-two {
+  color: #0C0C0C;
+  display: block;
+  background: #FFFFFF;
+  ;
   text-align: center;
   padding: 10px 35px;
   border-radius: 5px;
@@ -1496,10 +1553,10 @@ section,
   margin-bottom: 6px;
 }
 
-.pricing .cta-btn:hover {
+/* .pricing .cta-btn:hover {
   background: var(--accent-color);
   color: var(--contrast-color);
-}
+} */
 
 .pricing ul {
   padding: 0;
@@ -1512,6 +1569,8 @@ section,
 .pricing ul li {
   padding: 10px 0;
   display: flex;
+  color: #3B3C45;
+  ;
   align-items: center;
 }
 
@@ -1679,9 +1738,11 @@ section,
   background-color: var(--contrast-color);
   box-shadow: 0px 0 20px color-mix(in srgb, var(--default-color), transparent 90%);
   box-sizing: content-box;
-  padding: 30px;
+  padding: 30px 20px 30px 20px;
   margin: 40px 30px;
-  min-height: 320px;
+  max-height: 415px;
+  max-width: 420px;
+  border-radius: 20px 20px 0px 0px;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -1698,8 +1759,9 @@ section,
 }
 
 .testimonials .testimonial-item .testimonial-img {
-  width: 90px;
-  border-radius: 50%;
+  width: 418px;
+  height: 230px;
+  /* border-radius: 50%; */
   border: 4px solid var(--background-color);
   margin: 0 auto;
 }
