--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,7 +12,9 @@
 --------------------------------------------------------------*/
 /* Fonts */
 :root {
-  --default-font: "Onest", sans-serif, "Roboto", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --default-font: "Onest", sans-serif, "Roboto", system-ui, -apple-system,
+    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --heading-font: "Onest", sans-serif;
   --nav-font: "Onest", sans-serif;
 }
@@ -29,9 +31,7 @@
   --heading-color: #3e5055;
 
   /* Accent Color - This is the main accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out. */
-  --accent-color: #2873BD;
-  ;
-
+  --accent-color: #2873bd;
   /* Contrast Color - This is a color used for text when the background color is one of the heading, accent, or default colors. Its purpose is to ensure proper contrast and readability when placed over these more dominant colors. */
   --contrast-color: #ffffff;
 }
@@ -39,9 +39,7 @@
 /* Nav Menu Colors */
 :root {
   /* Nav Color - This is the default color of the main navmenu links. */
-  --nav-color: #0C0C0C;
-  ;
-
+  --nav-color: #0c0c0c;
   /* Nav Hover Color - This color is applied to main navmenu links when they are hovered over. */
   --nav-hover-color: #77b6ca;
 
@@ -127,7 +125,7 @@ h6 {
 }
 
 .loginbutton {
-  color: #0C0C0C;
+  color: #0c0c0c;
   font-size: 18px;
   font-weight: 550;
   line-height: 22.95px;
@@ -167,7 +165,8 @@ h6 {
 }
 
 .scrolled .header {
-  box-shadow: 0px 0 18px color-mix(in srgb, var(--default-color), transparent 85%);
+  box-shadow: 0px 0 18px
+    color-mix(in srgb, var(--default-color), transparent 85%);
 }
 
 /* Index Page Header
@@ -182,6 +181,33 @@ h6 {
   --background-color: #ffffff;
 }
 
+.btns{
+  display: flex;
+  gap: 10px;
+}
+
+.bookdemo button {
+  color: white;
+  background: none;
+  width: Hug (197px) px;
+  height: Hug (53px) px;
+  padding: 15px 35px 15px 35px;
+  gap: 10px;
+  border-radius: 10px;
+  border: 1px solid white;
+  opacity: 0px;
+}
+.getstarted button {
+ 
+padding: 15px 35px 15px 35px;
+gap: 10px;
+border-radius: 10px;
+background: #2873BD;
+color: #ffffff;
+border:none
+/* opacity: 0px; */
+
+}
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
@@ -230,7 +256,7 @@ h6 {
     padding-right: 0;
   }
 
-  .navmenu li:hover>a,
+  .navmenu li:hover > a,
   .navmenu .active,
   .navmenu .active:focus {
     color: var(--nav-hover-color);
@@ -249,7 +275,8 @@ h6 {
     transition: 0.3s;
     border-radius: 4px;
     z-index: 99;
-    box-shadow: 0px 0px 30px color-mix(in srgb, var(--default-color), transparent 85%);
+    box-shadow: 0px 0px 30px
+      color-mix(in srgb, var(--default-color), transparent 85%);
   }
 
   .navmenu .dropdown ul li {
@@ -265,11 +292,10 @@ h6 {
 
   .navmenu .dropdown ul a i {
     font-size: 12px;
-
   }
 
   .bi-chevron-down {
-    color: #0C0C0C;
+    color: #0c0c0c;
     font-weight: bold;
     /* height: 24px;
     width: 24px; */
@@ -278,11 +304,11 @@ h6 {
 
   .navmenu .dropdown ul a:hover,
   .navmenu .dropdown ul .active:hover,
-  .navmenu .dropdown ul li:hover>a {
+  .navmenu .dropdown ul li:hover > a {
     color: var(--nav-dropdown-hover-color);
   }
 
-  .navmenu .dropdown:hover>ul {
+  .navmenu .dropdown:hover > ul {
     opacity: 1;
     top: 100%;
     visibility: visible;
@@ -294,7 +320,7 @@ h6 {
     visibility: hidden;
   }
 
-  .navmenu .dropdown .dropdown:hover>ul {
+  .navmenu .dropdown .dropdown:hover > ul {
     opacity: 1;
     top: 0;
     left: -100%;
@@ -309,7 +335,8 @@ h6 {
     margin: 0;
     padding: 10px;
     background: var(--nav-dropdown-background-color);
-    box-shadow: 0px 0px 20px color-mix(in srgb, var(--default-color), transparent 90%);
+    box-shadow: 0px 0px 20px
+      color-mix(in srgb, var(--default-color), transparent 90%);
     position: absolute;
     top: 130%;
     left: 0;
@@ -327,7 +354,7 @@ h6 {
   }
 
   .navmenu .megamenu ul li a,
-  .navmenu .megamenu ul li:hover>a {
+  .navmenu .megamenu ul li:hover > a {
     padding: 10px 20px;
     font-size: 15px;
     color: var(--nav-dropdown-color);
@@ -339,7 +366,7 @@ h6 {
     color: var(--nav-dropdown-hover-color);
   }
 
-  .navmenu .megamenu:hover>ul {
+  .navmenu .megamenu:hover > ul {
     opacity: 1;
     top: 100%;
     visibility: visible;
@@ -373,7 +400,8 @@ h6 {
     overflow-y: auto;
     transition: 0.3s;
     z-index: 9998;
-    box-shadow: 0px 0px 30px color-mix(in srgb, var(--default-color), transparent 90%);
+    box-shadow: 0px 0px 30px
+      color-mix(in srgb, var(--default-color), transparent 90%);
   }
 
   .navmenu a,
@@ -440,7 +468,7 @@ h6 {
     background-color: rgba(33, 37, 41, 0.1);
   }
 
-  .navmenu .dropdown>.dropdown-active {
+  .navmenu .dropdown > .dropdown-active {
     display: block;
     background-color: rgba(33, 37, 41, 0.03);
   }
@@ -467,7 +495,7 @@ h6 {
     transition: 0.3s;
   }
 
-  .mobile-nav-active .navmenu>ul {
+  .mobile-nav-active .navmenu > ul {
     display: block;
   }
 }
@@ -526,7 +554,7 @@ h6 {
   color: color-mix(in srgb, var(--default-color), transparent 30%);
   margin-right: 10px;
   transition: 0.3s;
-  color: #0C0C0C;
+  color: #0c0c0c;
   background-color: #ffffff;
 }
 
@@ -545,7 +573,6 @@ h6 {
 
 .footer .footer-links {
   margin-bottom: 30px;
-
 }
 
 .footer .footer-links ul {
@@ -568,13 +595,12 @@ h6 {
 
 .footer .footer-links ul li:first-child {
   padding-top: 0;
-
 }
 
 .footer .footer-links ul a {
   color: color-mix(in srgb, var(--default-color), transparent 30%);
   display: inline-block;
-  color: #F1F2F4;
+  color: #f1f2f4;
   opacity: 50%;
   font-size: 16px;
   line-height: 1;
@@ -587,7 +613,6 @@ h6 {
 .footer .footer-contact p {
   margin-bottom: 5px;
   opacity: 70%;
-
 }
 
 .footer .footer-newsletter .newsletter-form {
@@ -605,7 +630,7 @@ h6 {
   border-color: var(--accent-color);
 }
 
-.footer .footer-newsletter .newsletter-form input[type=email] {
+.footer .footer-newsletter .newsletter-form input[type="email"] {
   border: 0;
   padding: 4px 10px;
   width: 100%;
@@ -613,11 +638,11 @@ h6 {
   color: var(--default-color);
 }
 
-.footer .footer-newsletter .newsletter-form input[type=email]:focus-visible {
+.footer .footer-newsletter .newsletter-form input[type="email"]:focus-visible {
   outline: none;
 }
 
-.footer .footer-newsletter .newsletter-form input[type=submit] {
+.footer .footer-newsletter .newsletter-form input[type="submit"] {
   border: 0;
   font-size: 16px;
   padding: 0 20px;
@@ -628,7 +653,7 @@ h6 {
   border-radius: 50px;
 }
 
-.footer .footer-newsletter .newsletter-form input[type=submit]:hover {
+.footer .footer-newsletter .newsletter-form input[type="submit"]:hover {
   background: color-mix(in srgb, var(--accent-color), transparent 20%);
 }
 
@@ -662,8 +687,6 @@ h6 {
   margin-top: 10px;
 }
 
-
-
 .footer .footer-newsletter .loading:before {
   content: "";
   display: inline-block;
@@ -691,7 +714,8 @@ h6 {
   padding-bottom: 25px;
   background-color: #111111;
   color: #ffffff;
-  border-top: 2px solid color-mix(in srgb, var(--default-color), transparent 10%);
+  border-top: 2px solid
+    color-mix(in srgb, var(--default-color), transparent 10%);
 }
 
 .footer .copyright p {
@@ -699,7 +723,7 @@ h6 {
   color: #ffffff;
   font-size: 18px;
   opacity: 50%;
-  background-color: #111111
+  background-color: #111111;
 }
 
 .footer .credits {
@@ -712,7 +736,7 @@ h6 {
 }
 
 .footer .credits a {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 /*--------------------------------------------------------------
@@ -828,11 +852,11 @@ h6 {
   font-size: 14px;
 }
 
-.page-title .breadcrumbs ol li+li {
+.page-title .breadcrumbs ol li + li {
   padding-left: 10px;
 }
 
-.page-title .breadcrumbs ol li+li::before {
+.page-title .breadcrumbs ol li + li::before {
   content: "/";
   display: inline-block;
   padding-right: 10px;
@@ -852,7 +876,6 @@ section,
 }
 
 @media (max-width: 1199px) {
-
   section,
   .section {
     scroll-margin-top: 66px;
@@ -924,7 +947,7 @@ section,
   inset: 0;
   z-index: 2;
 }
-.imaging img{
+.imaging img {
   width: 530px;
   height: 470px;
   border-radius: 20px;
@@ -933,7 +956,7 @@ section,
 .containerr {
   position: relative;
   top: 40px;
-  background-color: #2A4D6F;
+  background-color: #2a4d6f;
   color: white;
   height: 597px;
   width: 1920px;
@@ -946,9 +969,8 @@ section,
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
   width: 100%;
-  padding-right: calc(var(--bs-gutter-x)*S .5);
-  padding-left: calc(var(--bs-gutter-x)* .5);
-
+  padding-right: calc(var(--bs-gutter-x) * S 0.5);
+  padding-left: calc(var(--bs-gutter-x) * 0.5);
 }
 
 .hero .container {
@@ -991,13 +1013,15 @@ section,
   padding: 10px 28px;
   border-radius: 50px;
   transition: 0.5s;
-  box-shadow: 0 8px 28px color-mix(in srgb, var(--accent-color), transparent 80%);
+  box-shadow: 0 8px 28px
+    color-mix(in srgb, var(--accent-color), transparent 80%);
 }
 
 .hero .btn-get-started:hover {
   color: var(--contrast-color);
   background: color-mix(in srgb, var(--accent-color), transparent 15%);
-  box-shadow: 0 8px 28px color-mix(in srgb, var(--accent-color), transparent 55%);
+  box-shadow: 0 8px 28px
+    color-mix(in srgb, var(--accent-color), transparent 55%);
 }
 
 .hero .btn-watch-video {
@@ -1118,7 +1142,6 @@ section,
   /* left: 300px; */
   /* margin-left: 70px; */
   padding-left: 12px;
-
 }
 
 .content .who-we-are {
@@ -1192,7 +1215,7 @@ section,
 .clients {
   padding: 50px 0;
 }
-.clients p{
+.clients p {
   text-align: center;
 }
 .clients .client-logo {
@@ -1259,7 +1282,8 @@ section,
   font-size: 22px;
   flex-shrink: 0;
   border-radius: 50px;
-  box-shadow: 0 2px 4px color-mix(in srgb, var(--default-color), transparent 85%);
+  box-shadow: 0 2px 4px
+    color-mix(in srgb, var(--default-color), transparent 85%);
 }
 
 .features .nav-link h4 {
@@ -1289,7 +1313,7 @@ section,
 /*--------------------------------------------------------------
 # Features Details Section
 --------------------------------------------------------------*/
-.features-details .features-item+.features-item {
+.features-details .features-item + .features-item {
   margin-top: 60px;
 }
 
@@ -1434,7 +1458,8 @@ section,
 }
 
 .services .service-item:hover {
-  box-shadow: 0px 2px 25px color-mix(in srgb, var(--default-color), transparent 90%);
+  box-shadow: 0px 2px 25px
+    color-mix(in srgb, var(--default-color), transparent 90%);
 }
 
 .services .service-item:hover h3 {
@@ -1497,20 +1522,20 @@ section,
 --------------------------------------------------------------*/
 .pricing {
   background-color: #2a4d6f;
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 18px;
   padding: 130px 30px 150px 0px;
 }
 
 .pricing h2 {
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 34px;
 }
 
 .pricing .pricing-item-one {
   background-color: #ffffff;
   padding: 40px 40px;
-  color: #0C0C0C;
+  color: #0c0c0c;
   font-weight: 600;
   height: 525px;
   width: 420px;
@@ -1518,16 +1543,15 @@ section,
 }
 
 .pricing .pricing-item-one h2 {
-  color: #0C0C0C;
-  ;
+  color: #0c0c0c;
 }
 
 .pricing .pricing-item-three h2 {
-  color: #0C0C0C;
+  color: #0c0c0c;
 }
 
 .pricing .pricing-item-two {
-  background-color: #0B0B0B;
+  background-color: #0b0b0b;
   font-weight: 600;
   padding: 40px 40px;
   height: 525px;
@@ -1536,19 +1560,18 @@ section,
 }
 
 .pricing .pricing-item-two h4 {
-color: #FFFFFF;
+  color: #ffffff;
 }
 
 .pricing .pricing-item-three {
   background-color: #ffffff;
   padding: 40px 40px;
-  color: #0C0C0C;
+  color: #0c0c0c;
   font-weight: 600;
   height: 525px;
   width: 420px;
   border-radius: 15px;
 }
-
 
 .pricing h3 {
   font-weight: 600;
@@ -1560,7 +1583,7 @@ color: #FFFFFF;
   color: var(--accent-color);
   font-size: 48px;
   font-weight: 700;
-  color: #0C0C0C;
+  color: #0c0c0c;
   font-family: var(--heading-font);
   margin-bottom: 5px;
   margin-top: 5px;
@@ -1579,22 +1602,20 @@ color: #FFFFFF;
 .pricing .description {
   font-size: 18px;
   font-weight: 400;
-  color: #3B3C45;
-  ;
+  color: #3b3c45;
 }
 
 .pricing .description-two {
   font-size: 18px;
   font-weight: 400;
-  color: #FFFFFF;
-  ;
+  color: #ffffff;
 }
 
 .pricing .cta-btn {
   background-color: var(--default-color);
   color: var(--contrast-color);
   display: block;
-  background: #2873BD;
+  background: #2873bd;
   text-align: center;
   padding: 10px 35px;
   border-radius: 5px;
@@ -1607,10 +1628,9 @@ color: #FFFFFF;
 }
 
 .pricing .cta-btn-two {
-  color: #0C0C0C;
+  color: #0c0c0c;
   display: block;
-  background: #FFFFFF;
-  ;
+  background: #ffffff;
   text-align: center;
   padding: 10px 35px;
   border-radius: 5px;
@@ -1638,7 +1658,7 @@ color: #FFFFFF;
 .pricing ul li {
   padding: 10px 0;
   display: flex;
-  color: #3B3C45;
+  color: #3b3c45;
   align-items: center;
   font-size: 16px;
 }
@@ -1648,13 +1668,13 @@ color: #FFFFFF;
 }
 
 .pricing ul i {
-  color: #0C0C0C;
+  color: #0c0c0c;
   font-size: 24px;
   padding-right: 3px;
 }
 
 .pricing .pricing-item-two ul i {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .pricing ul .na {
@@ -1667,11 +1687,11 @@ color: #FFFFFF;
 
 .pricing .pricing-item-one .na span {
   text-decoration: line-through;
-  color: #0C0C0C;
+  color: #0c0c0c;
 }
 
 .pricing .pricing-item-two ul li {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .pricing .featured {
@@ -1814,7 +1834,8 @@ color: #FFFFFF;
 
 .testimonials .testimonial-item {
   background-color: var(--contrast-color);
-  box-shadow: 0px 0 20px color-mix(in srgb, var(--default-color), transparent 90%);
+  box-shadow: 0px 0 20px
+    color-mix(in srgb, var(--default-color), transparent 90%);
   box-sizing: content-box;
   padding: 30px 20px 30px 20px;
   margin: 40px 30px;
@@ -1924,7 +1945,8 @@ color: #FFFFFF;
   align-items: center;
   transition: all 0.3s ease-in-out;
   border-radius: 50%;
-  box-shadow: 0 2px 3px color-mix(in srgb, var(--default-color), transparent 85%);
+  box-shadow: 0 2px 3px
+    color-mix(in srgb, var(--default-color), transparent 85%);
 }
 
 .contact .info-item h3 {
@@ -1991,31 +2013,35 @@ color: #FFFFFF;
   animation: animate-loading 1s linear infinite;
 }
 
-.contact .php-email-form input[type=text],
-.contact .php-email-form input[type=email],
+.contact .php-email-form input[type="text"],
+.contact .php-email-form input[type="email"],
 .contact .php-email-form textarea {
   font-size: 14px;
   padding: 10px 15px;
   box-shadow: none;
   border-radius: 0;
   color: var(--default-color);
-  background-color: color-mix(in srgb, var(--background-color), transparent 50%);
+  background-color: color-mix(
+    in srgb,
+    var(--background-color),
+    transparent 50%
+  );
   border-color: color-mix(in srgb, var(--default-color), transparent 80%);
 }
 
-.contact .php-email-form input[type=text]:focus,
-.contact .php-email-form input[type=email]:focus,
+.contact .php-email-form input[type="text"]:focus,
+.contact .php-email-form input[type="email"]:focus,
 .contact .php-email-form textarea:focus {
   border-color: var(--accent-color);
 }
 
-.contact .php-email-form input[type=text]::placeholder,
-.contact .php-email-form input[type=email]::placeholder,
+.contact .php-email-form input[type="text"]::placeholder,
+.contact .php-email-form input[type="email"]::placeholder,
 .contact .php-email-form textarea::placeholder {
   color: color-mix(in srgb, var(--default-color), transparent 70%);
 }
 
-.contact .php-email-form button[type=submit] {
+.contact .php-email-form button[type="submit"] {
   color: var(--contrast-color);
   background: var(--accent-color);
   border: 0;
@@ -2024,7 +2050,7 @@ color: #FFFFFF;
   border-radius: 50px;
 }
 
-.contact .php-email-form button[type=submit]:hover {
+.contact .php-email-form button[type="submit"]:hover {
   background: color-mix(in srgb, var(--accent-color), transparent 20%);
 }
 
@@ -2043,17 +2069,19 @@ color: #FFFFFF;
 --------------------------------------------------------------*/
 .service-details .service-box {
   padding: 20px;
-  box-shadow: 0px 2px 20px color-mix(in srgb, var(--default-color), transparent 88%);
+  box-shadow: 0px 2px 20px
+    color-mix(in srgb, var(--default-color), transparent 88%);
 }
 
-.service-details .service-box+.service-box {
+.service-details .service-box + .service-box {
   margin-top: 30px;
 }
 
 .service-details .service-box h4 {
   font-size: 20px;
   font-weight: 700;
-  border-bottom: 2px solid color-mix(in srgb, var(--default-color), transparent 92%);
+  border-bottom: 2px solid
+    color-mix(in srgb, var(--default-color), transparent 92%);
   padding-bottom: 15px;
   margin-bottom: 15px;
 }
@@ -2098,7 +2126,8 @@ color: #FFFFFF;
   align-items: center;
   padding: 10px 0;
   transition: 0.3s;
-  border-top: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
+  border-top: 1px solid
+    color-mix(in srgb, var(--default-color), transparent 90%);
 }
 
 .service-details .download-catalog a:first-child {
