--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -166,8 +166,7 @@ h6 {
 }
 
 .scrolled .header {
-  box-shadow: 0px 0 18px
-    color-mix(in srgb, var(--default-color), transparent 85%);
+  box-shadow: 0px 0 18px color-mix(in srgb, var(--default-color), transparent 85%);
 }
 
 /* Index Page Header
@@ -182,7 +181,7 @@ h6 {
   --background-color: #ffffff;
 }
 
-.btns{
+.btns {
   display: flex;
   gap: 10px;
 }
@@ -198,30 +197,32 @@ h6 {
   border: 1px solid white;
   opacity: 0px;
 }
+
 .getstarted button {
- 
-padding: 15px 35px 15px 35px;
-gap: 10px;
-border-radius: 10px;
-background: #2873BD;
-color: #ffffff;
-border:none
-/* opacity: 0px; */
+
+  padding: 15px 35px 15px 35px;
+  gap: 10px;
+  border-radius: 10px;
+  background: #2873BD;
+  color: #ffffff;
+  border: none
+    /* opacity: 0px; */
 
 }
 
-.herotwo-line p{
+.herotwo-line p {
   margin-top: 35px;
-font-family: "Onest", sans-serif;
+  font-family: "Onest", sans-serif;
 
- /* font-family: var(--); */
-font-size: 18px;
-font-weight: 400;
-line-height: 27px;
-text-align: center;
+  /* font-family: var(--); */
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 27px;
+  text-align: center;
 
 
 }
+
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
@@ -270,7 +271,7 @@ text-align: center;
     padding-right: 0;
   }
 
-  .navmenu li:hover > a,
+  .navmenu li:hover>a,
   .navmenu .active,
   .navmenu .active:focus {
     color: var(--nav-hover-color);
@@ -289,8 +290,7 @@ text-align: center;
     transition: 0.3s;
     border-radius: 4px;
     z-index: 99;
-    box-shadow: 0px 0px 30px
-      color-mix(in srgb, var(--default-color), transparent 85%);
+    box-shadow: 0px 0px 30px color-mix(in srgb, var(--default-color), transparent 85%);
   }
 
   .navmenu .dropdown ul li {
@@ -318,11 +318,11 @@ text-align: center;
 
   .navmenu .dropdown ul a:hover,
   .navmenu .dropdown ul .active:hover,
-  .navmenu .dropdown ul li:hover > a {
+  .navmenu .dropdown ul li:hover>a {
     color: var(--nav-dropdown-hover-color);
   }
 
-  .navmenu .dropdown:hover > ul {
+  .navmenu .dropdown:hover>ul {
     opacity: 1;
     top: 100%;
     visibility: visible;
@@ -334,7 +334,7 @@ text-align: center;
     visibility: hidden;
   }
 
-  .navmenu .dropdown .dropdown:hover > ul {
+  .navmenu .dropdown .dropdown:hover>ul {
     opacity: 1;
     top: 0;
     left: -100%;
@@ -349,8 +349,7 @@ text-align: center;
     margin: 0;
     padding: 10px;
     background: var(--nav-dropdown-background-color);
-    box-shadow: 0px 0px 20px
-      color-mix(in srgb, var(--default-color), transparent 90%);
+    box-shadow: 0px 0px 20px color-mix(in srgb, var(--default-color), transparent 90%);
     position: absolute;
     top: 130%;
     left: 0;
@@ -368,7 +367,7 @@ text-align: center;
   }
 
   .navmenu .megamenu ul li a,
-  .navmenu .megamenu ul li:hover > a {
+  .navmenu .megamenu ul li:hover>a {
     padding: 10px 20px;
     font-size: 15px;
     color: var(--nav-dropdown-color);
@@ -380,7 +379,7 @@ text-align: center;
     color: var(--nav-dropdown-hover-color);
   }
 
-  .navmenu .megamenu:hover > ul {
+  .navmenu .megamenu:hover>ul {
     opacity: 1;
     top: 100%;
     visibility: visible;
@@ -414,8 +413,7 @@ text-align: center;
     overflow-y: auto;
     transition: 0.3s;
     z-index: 9998;
-    box-shadow: 0px 0px 30px
-      color-mix(in srgb, var(--default-color), transparent 90%);
+    box-shadow: 0px 0px 30px color-mix(in srgb, var(--default-color), transparent 90%);
   }
 
   .navmenu a,
@@ -482,7 +480,7 @@ text-align: center;
     background-color: rgba(33, 37, 41, 0.1);
   }
 
-  .navmenu .dropdown > .dropdown-active {
+  .navmenu .dropdown>.dropdown-active {
     display: block;
     background-color: rgba(33, 37, 41, 0.03);
   }
@@ -509,7 +507,7 @@ text-align: center;
     transition: 0.3s;
   }
 
-  .mobile-nav-active .navmenu > ul {
+  .mobile-nav-active .navmenu>ul {
     display: block;
   }
 }
@@ -728,8 +726,7 @@ text-align: center;
   padding-bottom: 25px;
   background-color: #111111;
   color: #ffffff;
-  border-top: 2px solid
-    color-mix(in srgb, var(--default-color), transparent 10%);
+  border-top: 2px solid color-mix(in srgb, var(--default-color), transparent 10%);
 }
 
 .footer .copyright p {
@@ -866,11 +863,11 @@ text-align: center;
   font-size: 14px;
 }
 
-.page-title .breadcrumbs ol li + li {
+.page-title .breadcrumbs ol li+li {
   padding-left: 10px;
 }
 
-.page-title .breadcrumbs ol li + li::before {
+.page-title .breadcrumbs ol li+li::before {
   content: "/";
   display: inline-block;
   padding-right: 10px;
@@ -890,6 +887,7 @@ section,
 }
 
 @media (max-width: 1199px) {
+
   section,
   .section {
     scroll-margin-top: 66px;
@@ -964,7 +962,8 @@ section,
   inset: 0;
   z-index: 2;
 }
-.imaging img{
+
+.imaging img {
   width: 530px;
   height: 470px;
   border-radius: 20px;
@@ -1031,15 +1030,13 @@ section,
   padding: 10px 28px;
   border-radius: 50px;
   transition: 0.5s;
-  box-shadow: 0 8px 28px
-    color-mix(in srgb, var(--accent-color), transparent 80%);
+  box-shadow: 0 8px 28px color-mix(in srgb, var(--accent-color), transparent 80%);
 }
 
 .hero .btn-get-started:hover {
   color: var(--contrast-color);
   background: color-mix(in srgb, var(--accent-color), transparent 15%);
-  box-shadow: 0 8px 28px
-    color-mix(in srgb, var(--accent-color), transparent 55%);
+  box-shadow: 0 8px 28px color-mix(in srgb, var(--accent-color), transparent 55%);
 }
 
 .hero .btn-watch-video {
@@ -1143,6 +1140,8 @@ section,
   color: var(--contrast-color);
 }
 
+
+
 /*--------------------------------------------------------------
 # About Section
 --------------------------------------------------------------*/
@@ -1233,7 +1232,8 @@ section,
 .clients {
   padding: 50px 0;
 }
-.clients p{
+
+.clients p {
   text-align: center;
 }
 
@@ -1307,8 +1307,7 @@ section,
   font-size: 22px;
   flex-shrink: 0;
   border-radius: 50px;
-  box-shadow: 0 2px 4px
-    color-mix(in srgb, var(--default-color), transparent 85%);
+  box-shadow: 0 2px 4px color-mix(in srgb, var(--default-color), transparent 85%);
 }
 
 .features .nav-link h4 {
@@ -1329,8 +1328,8 @@ section,
 
 .features .nav-link.active {
   width: 385px;
-    height: 190px;
-    background: color-mix(in srgb, var(--accent-color), transparent 92%);
+  height: 190px;
+  background: color-mix(in srgb, var(--accent-color), transparent 92%);
 }
 
 .features .tab-pane img {
@@ -1343,7 +1342,7 @@ section,
 /*--------------------------------------------------------------
 # Features Details Section
 --------------------------------------------------------------*/
-.features-details .features-item + .features-item {
+.features-details .features-item+.features-item {
   margin-top: 60px;
 }
 
@@ -1488,8 +1487,7 @@ section,
 }
 
 .services .service-item:hover {
-  box-shadow: 0px 2px 25px
-    color-mix(in srgb, var(--default-color), transparent 90%);
+  box-shadow: 0px 2px 25px color-mix(in srgb, var(--default-color), transparent 90%);
 }
 
 .services .service-item:hover h3 {
@@ -1590,7 +1588,7 @@ section,
 }
 
 .pricing .pricing-item-two h4 {
-color: #FFFFFF;
+  color: #FFFFFF;
 }
 
 .pricing .pricing-item-three {
@@ -1864,8 +1862,7 @@ color: #FFFFFF;
 
 .testimonials .testimonial-item {
   background-color: var(--contrast-color);
-  box-shadow: 0px 0 20px
-    color-mix(in srgb, var(--default-color), transparent 90%);
+  box-shadow: 0px 0 20px color-mix(in srgb, var(--default-color), transparent 90%);
   box-sizing: content-box;
   padding: 30px 20px 30px 20px;
   margin: 40px 30px;
@@ -1975,8 +1972,7 @@ color: #FFFFFF;
   align-items: center;
   transition: all 0.3s ease-in-out;
   border-radius: 50%;
-  box-shadow: 0 2px 3px
-    color-mix(in srgb, var(--default-color), transparent 85%);
+  box-shadow: 0 2px 3px color-mix(in srgb, var(--default-color), transparent 85%);
 }
 
 .contact .info-item h3 {
@@ -2051,11 +2047,9 @@ color: #FFFFFF;
   box-shadow: none;
   border-radius: 0;
   color: var(--default-color);
-  background-color: color-mix(
-    in srgb,
-    var(--background-color),
-    transparent 50%
-  );
+  background-color: color-mix(in srgb,
+      var(--background-color),
+      transparent 50%);
   border-color: color-mix(in srgb, var(--default-color), transparent 80%);
 }
 
@@ -2099,19 +2093,17 @@ color: #FFFFFF;
 --------------------------------------------------------------*/
 .service-details .service-box {
   padding: 20px;
-  box-shadow: 0px 2px 20px
-    color-mix(in srgb, var(--default-color), transparent 88%);
+  box-shadow: 0px 2px 20px color-mix(in srgb, var(--default-color), transparent 88%);
 }
 
-.service-details .service-box + .service-box {
+.service-details .service-box+.service-box {
   margin-top: 30px;
 }
 
 .service-details .service-box h4 {
   font-size: 20px;
   font-weight: 700;
-  border-bottom: 2px solid
-    color-mix(in srgb, var(--default-color), transparent 92%);
+  border-bottom: 2px solid color-mix(in srgb, var(--default-color), transparent 92%);
   padding-bottom: 15px;
   margin-bottom: 15px;
 }
@@ -2156,8 +2148,7 @@ color: #FFFFFF;
   align-items: center;
   padding: 10px 0;
   transition: 0.3s;
-  border-top: 1px solid
-    color-mix(in srgb, var(--default-color), transparent 90%);
+  border-top: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
 }
 
 .service-details .download-catalog a:first-child {
@@ -2234,8 +2225,9 @@ color: #FFFFFF;
 }
 
 
-
-
+/* -------------------------------------------------------------------
+# Custom Card In Black Section
+------------------------------------------------------------------- */
 
 .custom-card {
   width: 380px;
@@ -2246,7 +2238,23 @@ color: #FFFFFF;
   color: #fff;
 }
 
+.custom-card h5 {
+  text-align: center;
+  font-weight: 600;
+  padding-top: 30px;
+  font-size: 22px;
+}
 
+.custom-card p{
+  padding-top: 15px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.custom-card img{
+  padding-top: 95px;
+}
 
 .custom-card-two {
   width: 380px;
@@ -2256,6 +2264,23 @@ color: #FFFFFF;
   background: #0B0B0B;
   color: #fff;
 }
+
+.custom-card-two h5 {
+  text-align: center;
+  font-weight: 600;
+  padding-top: 20px;
+  font-size: 22px;
+}
+.custom-card-two p{
+  padding-top: 10px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 14px;
+}
+.custom-card-two img{
+  padding-top: 15px;
+}
+
 .custom-card-three {
   width: 380px;
   height: 790px;
@@ -2264,6 +2289,25 @@ color: #FFFFFF;
   background: #0B0B0B;
   color: #fff;
 }
+.custom-card-three h5 {
+  text-align: center;
+  font-weight: 600;
+  padding-top: 20px;
+  font-size: 22px;
+}
+.custom-card-three p{
+  padding-top: 140px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 14px;
+}
+.custom-card-three img{
+  padding-top: 15px;
+}
+.custom-card-three .image-card img{
+  padding-top: 115px;
+}
+
 .custom-card-foure {
   width: 380px;
   height: 300px;
@@ -2273,6 +2317,25 @@ color: #FFFFFF;
   color: #fff;
 }
 
+
+.custom-card-foure h5 {
+  text-align: center;
+  font-weight: 600;
+  padding-top: 30px;
+  font-size: 22px;
+}
+
+.custom-card-foure p{
+  padding-top: 15px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.custom-card-foure img{
+  padding-top: 25px;
+}
+
 .custom-card-five {
   width: 380px;
   height: 470px;
@@ -2280,4 +2343,24 @@ color: #FFFFFF;
   border: 2px solid #262626;
   background: #0B0B0B;
   color: #fff;
+}
+
+
+
+.custom-card-five h5 {
+  text-align: center;
+  font-weight: 600;
+  padding-top: 30px;
+  font-size: 22px;
+}
+
+.custom-card-five p{
+  padding-top: 15px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.custom-card-five img{
+  padding-top: 125px;
 }
