--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2617,3 +2617,63 @@ color: #0C0C0C;
 }
 
 
+
+
+/* ===================================review */
+.review-box {
+  margin: 30px;
+  width: 600px;
+  height: auto;
+  padding: 35px;
+  border-radius: 15px;
+  border: 2px solid #00000033;
+  background: #FFFFFF;
+}
+
+.review-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.user-info {
+  display: flex;
+  align-items: center;
+}
+
+.user-photo, .google-logo {
+  width: 65px;
+  height: 65px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.photo, .logo {
+  width: 100%;
+  height: 100%;
+}
+
+.user-details {
+  margin-left: 15px;
+}
+
+.user-name {
+  margin: 0;
+  font-weight: bold;
+}
+
+.review-date {
+  margin: 5px 0 0;
+}
+
+.review-text {
+  margin-top: 20px;
+}
+
+.star-rating {
+  color: yellow;
+}
+
+.star-rating i {
+  margin-right: 5px;
+}
