--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2623,7 +2623,7 @@ color: #0C0C0C;
 .review-box {
   margin: 30px;
   width: 600px;
-  height: auto;
+  height: 318px;
   padding: 35px;
   border-radius: 15px;
   border: 2px solid #00000033;
@@ -2674,6 +2674,6 @@ color: #0C0C0C;
   color: yellow;
 }
 
-.star-rating i {
+.star-rating img {
   margin-right: 5px;
 }
