--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2594,7 +2594,7 @@ height: 24px; */
 }
 
 .custom-card img {
-  padding-top: 95px;
+  padding-top: 60px;
 }
 
 .custom-card-two {
@@ -2623,7 +2623,7 @@ height: 24px; */
 }
 
 .custom-card-two img {
-  padding-top: 15px;
+  padding-top: 0;
 }
 
 .custom-card-three {
