--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -746,7 +746,7 @@ h6 {
   border-top: 2px solid color-mix(in srgb, var(--default-color), transparent 10%);
 }
 
-.footer .copyright p {
+.footer .copyright span{
   margin-bottom: -46px;
   color: #ffffff;
   font-size: 18px;
