--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2728,3 +2728,20 @@ height: 24px; */
   max-width: 600px;
   object-fit: cover;
 }
+
+
+/* ===================contact us======================= */
+.contact-button {
+  width: 410px;
+  height: 50px;
+  border-radius: 10px;
+  background-color: #2873BD;
+  color: white;
+  font-size: 18px;
+}
+
+.contact-button:hover {
+  background-color: #1e5799; /* Darker shade for hover effect */
+  color: white;
+}
+
